# ai_advent

./: .gitignore  Makefile  README.md  config.py  env.example  main.py  pyproject.toml  utils.py
handlers/: __init__.py  commands.py  messages.py  states.py
repositories/: __init__.py  database.py  document_repository.py  message_repository.py  user_repository.py
services/: __init__.py  daily_task_service.py  document_service.py  embedding_service.py  history_formatter_service.py  mcp_service.py  mcp_service_manager.py  message_service.py  rag_service.py  reranking_service.py  token_service.py  user_service.py  yandex_gpt_service.py
