[project]
name = "ai-advent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.5.0",
    "aiosqlite>=0.19.0",
    "fastmcp>=0.1.0",
    "apscheduler>=3.10.4",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "sqlite-vss>=0.1.0",
    "numpy>=1.24.0",
]
